# keyframe-extraction-ellipsoids

./: CMakeLists.txt  README.md  ellipsoid.cpp  ellipsoid.h  eventchain.cpp  eventchain.h  functions.cpp  imagergb.cpp  imagergb.h  main.cpp  tracker.cpp  tracker.h  xmlhandparser.cpp  xmlhandparser.h  xmlparser.cpp  xmlparser.h
